Add tests folder

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py38,py39,py310,py311,py312,flake8
 deps =
     pytest==7.4.3
     pytest-django==4.7.0
-commands = pytest --ds=testdjangoproject.settings testdjangoproject/tests
+commands = pytest --ds=testdjangoproject.settings testdjangoproject/tests tests
 
 [testenv:flake8]
 skip_install = true
