[WIP][feature] get tenant by domain

--- a/tox.ini
+++ b/tox.ini
@@ -3,9 +3,7 @@
 envlist = py38,py39,py310,py311,py312,flake8
 
 [testenv]
-deps =
-    pytest==7.4.3
-    pytest-django==4.7.0
+deps = -r{toxinidir}/requirements.txt
 commands = pytest --ds=testdjangoproject.settings testdjangoproject/tests tests
 
 [testenv:flake8]
