[feature] add unit test for MultiTenantMiddleware

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py38,py39,py310,py311,py312,flake8
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
-commands = pytest --ds=testdjangoproject.settings testdjangoproject/tests tests
+commands = pytest --ds=testdjangoproject.settings testdjangoproject/tests tests -vv
 
 [testenv:flake8]
 skip_install = true
